--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "chart.js": "^4.4.7",
+    "fhf": "^2.0.2",
     "next": "14.2.22",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
