--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.1.0",
     "chart.js": "^4.4.7",
     "fhf": "^2.0.2",
+    "fhf-react": "^2.0.5",
     "next": "14.2.22",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
