--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "14.2.22",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-super-responsive-table": "^6.0.1",
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@types/node": "^20",
